--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
 
 
 
@@ -771,6 +772,36 @@ h6,
 #pricing-table2-3 .mbr-plan .list-group-item {
   border-color: #cfcfcf;
 }
+#pricing-table2-3 UL {
+  font-size: 13px;
+  font-family: 'Raleway', sans-serif;
+}
+#pricing-table2-3 .mbr-price-figure {
+  font-size: 36px;
+}
+#pricing-table2-3 .mbr-price-term {
+  font-size: 36px;
+}
+#pricing-table2-p .mbr-plan-header,
+#pricing-table2-p .mbr-plan-body {
+  background-color: #f4f4f4;
+}
+#pricing-table2-p ul,
+#pricing-table2-p .mbr-plan-title,
+#pricing-table2-p .mbr-price-value,
+#pricing-table2-p .mbr-price-figure,
+#pricing-table2-p .mbr-price-term {
+  color: #28262b;
+}
+#pricing-table2-p .mbr-plan {
+  border-color: #e8e8e8;
+}
+#pricing-table2-p .mbr-plan .list-group-item {
+  border-color: #cfcfcf;
+}
+#pricing-table2-p .mbr-price-figure {
+  font-size: 30px;
+}
 #msg-box8-4 .mbr-section-title,
 #msg-box8-4 p {
   color: #fff;
@@ -780,13 +811,6 @@ h6,
   font-size: 20px;
 }
 #content1-7 H4 {
-  font-size: 22px;
-}
-#content1-8 DIV {
-  text-align: center;
-  font-size: 20px;
-}
-#content1-8 H4 {
   font-size: 22px;
 }
 #features7-9 .card-subtitle {
@@ -802,4 +826,176 @@ h6,
 }
 #form1-d .form-control-label {
   color: #232323;
+}
+#menu-f .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-f .navbar-caption {
+  color: #ffffff;
+  font-size: 20px;
+}
+#menu-f .navbar-toggler {
+  color: #ffffff;
+}
+#menu-f .close-icon::before,
+#menu-f .close-icon::after {
+  background-color: #ffffff;
+}
+#menu-f .link,
+#menu-f .dropdown-item {
+  color: #ffffff;
+}
+#menu-f .link {
+  font-size: 0.75rem;
+}
+#menu-f .dropdown-item,
+#menu-f .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-f .link:hover,
+#menu-f .dropdown-item:hover,
+#menu-f .link:focus,
+#menu-f .dropdown-item:focus {
+  color: #c0a375;
+}
+#menu-f .link[aria-expanded="true"],
+#menu-f .dropdown-menu {
+  background: #0e0e0e;
+}
+#menu-f .nav-dropdown-sm .link:focus,
+#menu-f .nav-dropdown-sm .link:hover,
+#menu-f .nav-dropdown-sm .dropdown-item:focus,
+#menu-f .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#menu-f .navbar,
+#menu-f .nav-dropdown-sm,
+#menu-f .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-f .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#menu-f .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-f .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-f .bg-color.transparent.opened .link:hover,
+#menu-f .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#menu-f .link[aria-expanded="true"],
+#menu-f .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#menu-f .link:hover,
+#menu-f .link:focus {
+  color: #c0a375;
+}
+#menu-f .dropdown-item:hover::before,
+#menu-f .dropdown-item:focus::before {
+  background: #c0a375;
+}
+#menu-f .dropdown-item:hover,
+#menu-f .dropdown-item:focus {
+  color: #ffffff;
+}
+#features1-i .striped .mbr-cards-col:nth-child(2n+1) {
+  background-color: #2e2e2e;
+}
+#features1-o .striped .mbr-cards-col:nth-child(2n+1) {
+  background-color: #ffffff;
+}
+#features1-o .mbr-cards-col:nth-child(odd) .card-text {
+  color: #000000;
+}
+#features1-o .mbr-cards-col:nth-child(even) .card-text {
+  color: #ffffff;
+}
+#features1-o .mbr-cards-col:nth-child(odd) .card-title {
+  color: #000000;
+}
+#features1-o .mbr-cards-col:nth-child(even) .card-title {
+  color: #ffffff;
+}
+#features1-o .mbr-cards-col:nth-child(odd) .card-subtitle {
+  color: #5b5b5b;
+}
+#features1-o .mbr-cards-col:nth-child(even) .card-subtitle {
+  color: #efefef;
+}
+#menu-k .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-k .navbar-caption {
+  color: #ffffff;
+  font-size: 20px;
+}
+#menu-k .navbar-toggler {
+  color: #ffffff;
+}
+#menu-k .close-icon::before,
+#menu-k .close-icon::after {
+  background-color: #ffffff;
+}
+#menu-k .link,
+#menu-k .dropdown-item {
+  color: #ffffff;
+}
+#menu-k .link {
+  font-size: 0.75rem;
+}
+#menu-k .dropdown-item,
+#menu-k .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-k .link:hover,
+#menu-k .dropdown-item:hover,
+#menu-k .link:focus,
+#menu-k .dropdown-item:focus {
+  color: #c0a375;
+}
+#menu-k .link[aria-expanded="true"],
+#menu-k .dropdown-menu {
+  background: #0e0e0e;
+}
+#menu-k .nav-dropdown-sm .link:focus,
+#menu-k .nav-dropdown-sm .link:hover,
+#menu-k .nav-dropdown-sm .dropdown-item:focus,
+#menu-k .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#menu-k .navbar,
+#menu-k .nav-dropdown-sm,
+#menu-k .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-k .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#menu-k .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-k .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-k .bg-color.transparent.opened .link:hover,
+#menu-k .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#menu-k .link[aria-expanded="true"],
+#menu-k .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#menu-k .link:hover,
+#menu-k .link:focus {
+  color: #c0a375;
+}
+#menu-k .dropdown-item:hover::before,
+#menu-k .dropdown-item:focus::before {
+  background: #c0a375;
+}
+#menu-k .dropdown-item:hover,
+#menu-k .dropdown-item:focus {
+  color: #ffffff;
 }
